AppInfo: Build Wear Health AppInfo permissions flow
This CL implements the AppInfo flow in go/ah-permissions-figma, enabling controlling granular health data for a specific app through Settings-AppInfo-Permission, on Wear.

Test: Build emulator, click into HealthConnect appInfo, see HealthConnect UI page, interact with UI, dumpsys see testapp permission flipped.
Test: http://screencast/cast/NDk2NDI2MzIxODExODY1NnxlOGFmNDQ5OC0xNA#t=2
Bug: 364638912
Bug: 364643019
Flag: com.android.healthfitness.flags.replace_body_sensor_permission_enabled
UI figma: go/ah-permissions-figma

Change-Id: Id2e61da6f3fd1e29d1962468c1991ccbabad8ac7

--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -1652,5 +1652,17 @@
     <string name="wear_request_single_data_type_permission" description="Title shown for allowing single fitness permission. ">Allow <xliff:g id="app_name" example="Run Tracker">%1$s</xliff:g> to access <xliff:g id="data_type" example="heart rate">%2$s</xliff:g>?</string>
     <!-- endregion -->
 
+    <!-- region App Info Permissions  -->
+    <string name="fitness_and_wellness" description="Title to display fitness and wellness permissions.">Fitness and wellness</string>
+    <string name="view_permissions_all_the_time" description="Text to allow an app to read health data in background.">all the time</string>
+    <string name="view_permissions_while_in_use" description="Text to allow an app to read health data in foreground.">while in use</string>
+    <string name="view_permissions_all_the_time_cap" description="Label for button to allow an app to read health data in background.">All the time</string>
+    <string name="view_permissions_while_in_use_cap" description="Label for button to allow an app to read health data in foreground.">While in use</string>
+    <string name="view_permissions_mode" description="Text to allow an app to read health data in foreground or background."><xliff:g id="app_name" example="Run Tracker">%1$s</xliff:g>can access all of your fitness and wellness data <xliff:g id="allow_mode" example="all the time">%2$s</xliff:g></string>
+    <string name="allowed_to_access" description="Text to display view permission mode (all the time or while in use).">Allowed to access</string>
+    <string name="allowed_to_read" description="Subtitle to display which permissions are allowed">Allowed to read</string>
+    <string name="give_permission_prompt" description="Text to display what permissions are allowed.">These permissions give <xliff:g id="app_name" example="Run Tracker">%1$s</xliff:g> access to data from your device sensors.</string>
+    <!-- endregion -->
+
     <!-- endregion -->
 </resources>
