--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -268,6 +268,11 @@
     <string name="wheelchair_pushes_lowercase_label" description="Lowercase label used to show the user's wheelchair pushes data [CHAR_LIMIT=50]">wheelchair pushes</string>
     <string name="wheelchair_pushes_read_content_description" description="Content description for switch that enables permissions for reading the user's wheelchair pushes data [CHAR_LIMIT=NONE]">Read wheelchair pushes</string>
     <string name="wheelchair_pushes_write_content_description" description="Content description for switch that enables permissions for writing the user's wheelchair pushes data [CHAR_LIMIT=NONE]">Write wheelchair pushes</string>
+
+    <string name="activity_intensity_uppercase_label" description="Uppercase label used to show the user's activity intensity data [CHAR_LIMIT=50]">Activity intensity</string>
+    <string name="activity_intensity_lowercase_label" description="Lowercase label used to show the user's activity intensity data [CHAR_LIMIT=50]">activity intensity</string>
+    <string name="activity_intensity_read_content_description" description="Content description for switch that enables permissions for reading the user's activity intensity data [CHAR_LIMIT=NONE]">Read activity intensity</string>
+    <string name="activity_intensity_write_content_description" description="Content description for switch that enables permissions for writing the user's activity intensity data [CHAR_LIMIT=NONE]">Write activity intensity</string>
     <!--endregion-->
 
     <!-- region Body measurements data types -->
